hero section changes

--- a/index.html
+++ b/index.html
@@ -784,7 +784,9 @@
                         </a>
                         <h1
                             class="mt-8 text-wrap text-4xl md:text-5xl font-semibold text-gray-950 dark:text-white xl:text-5xl xl:[line-height:1.125]">
-                            Experience the power of cutting-edge <br class="hidden sm:block">AI technology today. </h1>
+                            Revolutionize Your Terminal Experience
+                            <br class="hidden sm:block">with the power of AI
+                        </h1>
                         <p
                             class="text-wrap mx-auto mt-8 max-w-2xl text-lg text-gray-700 dark:text-gray-300 hidden sm:block">
                             Optimize your workflow with our state-of-the-art AI terminal. Seamlessly integrate advanced
@@ -1222,7 +1224,9 @@
                                             <h2
                                                 class="text-lg font-medium text-gray-800 transition group-hover:text-secondary-950 dark:text-white">
                                                 Team Collaboration</h2>
-                                            <p class="dark:text-gray-300 text-gray-700">Implement collaborative features within the terminal environment to facilitate real-time communication and shared editing.</p>
+                                            <p class="dark:text-gray-300 text-gray-700">Implement collaborative features
+                                                within the terminal environment to facilitate real-time communication
+                                                and shared editing.</p>
                                         </div>
                                     </div>
                                     <div
@@ -2478,7 +2482,7 @@ export default () =&gt; {
             <div
                 class="flex flex-wrap items-center justify-between gap-4 border-b pb-8 border-[--ui-light-border-color] dark:border-[--ui-dark-border-color]">
                 <a href="/" aria-label="Comet logo">
-                    
+
                 </a>
                 <div class="flex gap-3">
                     <a href="https://github.com/Comet-ui" target="blank" aria-label="github"
